change dev names in the time recordings

--- a/src/main/asciidoc/time_recording.adoc
+++ b/src/main/asciidoc/time_recording.adoc
@@ -1,4 +1,4 @@
-= Zeiterfassung für Gruppe XX
+= Zeiterfassung für Gruppe 24
 
 Notieren Sie die Zeit in Minuten für jeden Entwickler und – getrennt davon – für Team-Treffen pro Woche (Wochengranularität).
 Die individuell erfasste Zeit beinhaltet auch das Lesen von Dokumentationen, Besprechungen mit Teamkollegen und sonstige auf das Praktikum bezogene Aufgaben, jedoch *nicht* das Team-Treffen (= letzte Spalte).
@@ -6,7 +6,7 @@ Die individuell erfasste Zeit beinhaltet auch das Lesen von Dokumentationen, Bes
 // See http://asciidoctor.org/docs/user-manual/#tables
 [option="headers"]
 |===
-|Woche |Dev1 |Dev2 |Dev3 |Dev4 |Dev5 |Dev6 |Meeting
+|Woche |Till |Kien |Anna Lopatkina |Tobias Köllner |Deokgeun Kim |Viktor Reusch |Meeting
 |1  |…   |…    |…    |…    |…    |…    |…    
 |2  |…   |…    |…    |…    |…    |…    |…    
 |3  |…   |…    |…    |…    |…    |…    |…    
