added last names to protocol

--- a/src/main/asciidoc/protocols/2019.10.18.adoc
+++ b/src/main/asciidoc/protocols/2019.10.18.adoc
@@ -15,10 +15,10 @@ __Teilnehmer:__
 //Tabellarisch oder Aufzählung, Kennzeichnung von Teilnehmern mit besonderer Rolle (z.B. Kunde)
 
 - Anna Lopatkina
-- Till
+- Till Große
 - Tobias Köllner
 - Deokgeun Kim
-- Kien
+- Kien Dang Tran
 - Viktor Reusch
 
 == Bemerkungen
