--- a/src/main/asciidoc/time_recording.adoc
+++ b/src/main/asciidoc/time_recording.adoc
@@ -6,19 +6,19 @@ Die individuell erfasste Zeit beinhaltet auch das Lesen von Dokumentationen, Bes
 // See http://asciidoctor.org/docs/user-manual/#tables
 [option="headers"]
 |===
-|Woche |Till |Kien |Anna Lopatkina |Tobias Köllner |Deokgeun Kim |Viktor Reusch |Meeting
-|1  |3  |7    |5    |11    |…    |11,5    |3    
-|2  |1   |…    |3   |…    |…    |3    |1,5    
-|3  |…   |…    |…    |…    |…    |…    |…    
-|4  |…   |…    |…    |…    |…    |…    |…    
-|5  |…   |…    |…    |…    |…    |…    |…    
-|6  |…   |…    |…    |…    |…    |…    |…    
-|7  |…   |…    |…    |…    |…    |…    |…    
-|8  |…   |…    |…    |…    |…    |…    |…    
-|9  |…   |…    |…    |…    |…    |…    |…    
-|10  |…   |…    |…    |…    |…    |…    |…    
-|11  |…   |…    |…    |…    |…    |…    |…    
-|12  |…   |…    |…    |…    |…    |…    |…    
+|Woche |Till |Kien |Anna Lopatkina |Tobias Köllner |Viktor Reusch |Meeting
+|1     |3    |7    |5              |11             |11,5          |3    
+|2     |1    |…    |3              |…              |3             |1,5    
+|3     |…    |…    |…              |…              |…             |…    
+|4     |…    |…    |…              |…              |…             |…    
+|5     |…    |…    |…              |…              |…             |…    
+|6     |…    |…    |…              |…              |…             |…    
+|7     |…    |…    |…              |…              |…             |…    
+|8     |…    |…    |…              |…              |…             |…    
+|9     |…    |…    |…              |…              |…             |…    
+|10    |…    |…    |…              |…              |…             |…    
+|11    |…    |…    |…              |…              |…             |…    
+|12    |…    |…    |…              |…              |…             |…    
 |===
 
 Bitte tragen Sie am Ende des Praktikums noch folgende weitere Werte ein:
