--- a/src/main/asciidoc/time_recording.adoc
+++ b/src/main/asciidoc/time_recording.adoc
@@ -1,14 +1,14 @@
 = Zeiterfassung für Gruppe 24
 
-Notieren Sie die Zeit in Minuten für jeden Entwickler und – getrennt davon – für Team-Treffen pro Woche (Wochengranularität).
+Notieren Sie die Zeit in *Minuten* für jeden Entwickler und – getrennt davon – für Team-Treffen pro Woche (Wochengranularität).
 Die individuell erfasste Zeit beinhaltet auch das Lesen von Dokumentationen, Besprechungen mit Teamkollegen und sonstige auf das Praktikum bezogene Aufgaben, jedoch *nicht* das Team-Treffen (= letzte Spalte).
 
 // See http://asciidoctor.org/docs/user-manual/#tables
 [option="headers"]
 |===
 |Woche |Till |Kien |Anna Lopatkina |Tobias Köllner |Viktor Reusch |Meeting
-|1     |3    |7    |5              |11             |11,5          |3    
-|2     |1    |…    |9              |…              |6,75          |3    
+|1     |180    |420    |300              |660             |690          |180    
+|2     |60     |…      |540              |…               |405          |180    
 |3     |…    |…    |…              |…              |…             |…    
 |4     |…    |…    |…              |…              |…             |…    
 |5     |…    |…    |…              |…              |…             |…    
