--- a/src/main/asciidoc/srs/nicht-funktionale_anforderungen.adoc
+++ b/src/main/asciidoc/srs/nicht-funktionale_anforderungen.adoc
@@ -2,9 +2,44 @@
 
 === Qualitätsziele
 
-Dokumentieren Sie in einer Tabelle die Qualitätsziele, welche das System erreichen soll, sowie deren Priorität.
+Die folgende Tabelle zeigt, welche Qualitätsanforderungen in welchem ​​Umfang erfüllt werden müssen.
+Die erste Spalte listet die Qualitätsanforderungen auf.
+In den folgenden Spalten wird ein "x" verwendet, um die Priorität kennzuzeichnen.
+Die zugewiesene Priorität muss bei der Formulierung der konkreten nichtfunktionalen
+Anforderungen berücksichtigt werden.
+
+
+1 = Nicht wichtig ..
+5 = Sehr wichtig
+[options="header", cols="3h, ^1, ^1, ^1, ^1, ^1"]
+|===
+|Qualitätsanspruch        | 1 | 2 | 3 | 4 | 5
+|Wartbarkeit              |   |   |   | x |
+|Benutzerfreundlichkeit   |   |   | x |   |
+|Sicherkeit               |   |   |   | x |
+|Design                   |   | x |   |   |
+|===
+
 
 === Konkrete Nicht-Funktionale Anforderungen
 
-Beschreiben Sie Nicht-Funktionale Anforderungen, welche dazu dienen, die zuvor definierten Qualitätsziele zu erreichen.
-Achten Sie darauf, dass deren Erfüllung (mindestens theoretisch) messbar sein muss.
+ :desired-uptime: 99,5%
+
+[options="header", cols="2h, 1, 3, 12"]
+|===
+|ID
+|Version
+|Name
+|Beschreibung
+
+|[[NF0010]]<<NF0010>>
+|v0.1
+|Erreichbarkeit - Betriebszeit
+a|
+Das System soll mindestens **{Gewünschte - Betriebszeit}** Betriebszeit erreichbar sein.
+
+|[[NF0020]]<<NF0020>>
+|v0.1
+|Sicherheit - Passwortspeicherung
+a|
+Passwörter von Nutzern werden nur als Hash-Werte gespeichert, um Diebstahl zu verhindern.
